[package]
name = "fynx-proto"
version = "0.1.0-alpha.3"
edition = "2021"
rust-version = "1.75"
authors = ["Fynx Core Team"]
description = "Production-ready SSH and IPSec/IKEv2 protocol implementations with comprehensive testing and high-level APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rx947getrexp/fynx"
documentation = "https://docs.rs/fynx-proto"
homepage = "https://github.com/Rx947getrexp/fynx"
keywords = ["ssh", "ipsec", "vpn", "ikev2", "security"]
categories = ["network-programming", "cryptography", "authentication"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["ssh"]
ssh = []
dtls = []
ipsec = []
tty-password = ["rpassword"]

[dependencies]
fynx-platform = "0.1.0-alpha.1"

# Async runtime
tokio = { version = "1.35", features = ["net", "io-util", "sync", "time", "rt", "fs"] }
async-trait = "0.1"

# Crypto
ring = "0.17"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
p521 = { version = "0.13", features = ["ecdsa"] }
ecdsa = "0.16"
signature = "2.2"

# Utilities
bytes = "1.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
thiserror = "1.0"
hex = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
once_cell = "1.19"
subtle = "2.5"
tracing = "0.1"

# Private key parsing
pkcs1 = { version = "0.7", features = ["pem"] }
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
sec1 = { version = "0.7", features = ["pem"] }
rsa = "0.9"
base64 = "0.22"

# bcrypt-pbkdf for OpenSSH format
bcrypt-pbkdf = "0.10"

# Encryption algorithms for encrypted private keys
des = "0.8"
aes = "0.8"
cbc = "0.1"
ctr = "0.9"
md-5 = "0.10"

# IPSec encryption (AEAD ciphers)
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
cipher = "0.4"

# Optional compression
flate2 = { version = "1.0", optional = true }

# Optional: terminal password input
rpassword = { version = "7.3", optional = true }

[dev-dependencies]
hex-literal = "0.4"
criterion = "0.5"
proptest = "1.4"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
